2000-12-17  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.spec.in: change the controls name in the files section

2000-12-14  Larry Ewing  <lewing@helixcode.com>
	
	* Make gtkhtml-0.8 release.

	* configure.in (GTKHTML_CURRENT): update to 6

	* NEWS: add some initial news for this release.

	* README: update dependency numbers.

	* configure.in: update bonobo dependency to 0.29 and GAL to 0.3

2000-12-13  Larry Ewing  <lewing@helixcode.com>

	* configure.in (EXTRA_GNOME_LIBS): s/glade/libglade.
	(EXTRA_GNOME_CFLAGS): same.

2000-12-11  Dave Camp  <dave@helixcode.com>

	* capplet/Makefile.am (EXTRA_DIST): Include gtkhtml-capplet.glade.h

	* Makefile.am: Merged the two EXTRA_DIST sections.
	
2000-12-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (SUBDIRS): moved po subdir after capplet as we need
	capplet/gtkhtml-capplet.glade.h

2000-12-11  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* configure.in: add glade for the capplet

2000-12-07  Larry Ewing  <lewing@helixcode.com>

	* configure.in (GTKHTML_LIBS): add missing libs.
	(GTKHTML_INCLUDEDIR): add missing libs.

2000-11-28  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.spec.in: aplied patch from Chipzz@ULYSSIS.Org
	adds requirements, + %setup --> %setup -q

2000-11-26  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* configure.in (ALL_LINGUAS): added italian translation

2000-11-02  Michael Meeks  <michael@helixcode.com>

	* configure.in: Require bonobo-0.27+

2000-11-02  Michael Meeks <michael@helixcode.com>

	* The big api rename ...

2000-11-01  Radek Doulik  <rodo@helixcode.com>

	* configure.in: rewritten XIM test
	save and restore LDFLAGS in XIM test

2000-10-27  Joe Shaw  <joe@helixcode.com>

	* configure.in: Add components/http-storage-module/Makefile

	* components/Makefile.am: Compile http-storage-module along with
	ebrowser.

	* components/http-storage-module: Added. This is a bonobo storage
	backend for doing HTTP requests using libghttp.