@@ -154,12 +154,12 @@ AC_ARG_WITH(bonobo,
 )
 
 if $try_bonobo; then
-	AC_MSG_CHECKING(for Bonobo >= 0.29)
+	AC_MSG_CHECKING(for Bonobo >= 0.32)
 
 	if gnome-config --libs bonobox > /dev/null 2>&1; then
 		vers=`gnome-config --modversion bonobo | sed -e "s/bonobo-//" | \
 			awk 'BEGIN { FS = "."; } { printf "%d", $1 * 1000 + $2;}'`
-		if test "$vers" -ge 29; then
+		if test "$vers" -ge 32; then
 			bonobo_ok=true
 		else
 			bonobo_ok=false
