@@ -9,3 +9,4 @@ cat-id-tbl.c
 *.mo
 *.pox
 stamp-cat-id
+.headerlock
