@@ -1,3 +1,7 @@
+2001-01-03  Dietmar Maurer  <dietmar@helixcode.com>
+
+	* configure.in: require Bonobo 0.32 (for ebrowser)
+
 2000-12-17  Larry Ewing  <lewing@helixcode.com>
 
 	* gtkhtml.spec.in: change the controls name in the files section
